@@ -17,6 +17,7 @@
  */
 package org.apache.avro.io;
 
+import java.io.Flushable;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.ByteBuffer;
@@ -41,15 +42,10 @@ import org.apache.avro.util.Utf8;
  *
  *  @see Decoder
  */
-public abstract class Encoder {
+public abstract class Encoder implements Flushable {
 
   /** Redirect output (and reset the parser state if we're checking). */
   public abstract void init(OutputStream out) throws IOException;
-
-  /**
-   * Writes any buffered output to the underlying stream.
-   */
-  public abstract void flush() throws IOException;
 
   /**
    * "Writes" a null value.  (Doesn't actually write anything, but
