@@ -18,12 +18,13 @@
 
 package org.apache.avro.ipc;
 
+import java.io.Closeable;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.util.List;
 
 /** Base class for transmitters and recievers of raw binary messages. */
-public abstract class Transceiver {
+public abstract class Transceiver implements Closeable {
 
   public abstract String getRemoteName();
 
